--- a/piano/css/index.css
+++ b/piano/css/index.css
@@ -1,23 +1,15 @@
-:root {
+html, body, ul, li {
     box-sizing: border-box;
 }
-*,
-::before,
-::after {
-    box-sizing: inherit;
-}
-
 html, body, ul {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
 }
-
 li {
     list-style: none;
 }
-
 .keyboard {
     transition: background-color .1s ease 0s;
 }
